--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "day03"
+name = "common"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,9 +7,6 @@ edition = "2021"
 
 [dependencies]
 clap = {workspace = true}
-common = {path = "../common"}
-nom = {workspace = true}
-num = {workspace = true}
 
 [lints]
 workspace = true
