--- a/day04/Cargo.toml
+++ b/day04/Cargo.toml
@@ -1,11 +1,15 @@
 [package]
-name = "day02"
+name = "day04"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = {workspace = true}
+common = {path = "../common"}
+nom = {workspace = true}
+num = {workspace = true}
 
-[lints.rust]
-non_snake_case = "allow"
+[lints]
+workspace = true
