--- a/day08/Cargo.toml
+++ b/day08/Cargo.toml
@@ -6,8 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-nom = "7.1.3"
-num = "0.4.1"
+clap = {workspace = true}
+common = {path = "../common"}
+nom = {workspace = true}
+num = {workspace = true}
 
-[lints.rust]
-non_snake_case = "allow"
+[lints]
+workspace = true
