--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,11 +3,7 @@
 resolver = "2"
 
 members = [
-    "common",
     "rust_advent_2023",
-    "day01",
-    "day08",
-    "day09",
 ]
 
 [workspace.lints.rust]
@@ -15,5 +11,6 @@ non_snake_case = "allow"
 
 [workspace.dependencies]
 clap = { version = "4.4.11", features = ["derive"] }
+itertools = "0.12.0"
 nom = "7.1.3"
 num = "0.4.1"
