--- a/day09/Cargo.toml
+++ b/day09/Cargo.toml
@@ -3,11 +3,10 @@ name = "day09"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 clap = {workspace = true}
 common = {path = "../common"}
+itertools = {workspace = true}
 nom = {workspace = true}
 num = {workspace = true}
 
