--- a/day10/Cargo.toml
+++ b/day10/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
-name = "day04"
+name = "day10"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 clap = {workspace = true}
 common = {path = "../common"}
+itertools = {workspace = true}
 nom = {workspace = true}
 num = {workspace = true}
 
