--- a/rust_advent_2023/Cargo.toml
+++ b/rust_advent_2023/Cargo.toml
@@ -3,8 +3,6 @@ name = "rust_advent_2023"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 clap = {workspace = true}
 common = {path = "../common"}
@@ -17,3 +15,4 @@ day06 = {path = "../day06"}
 day07 = {path = "../day07"}
 day08 = {path = "../day08"}
 day09 = {path = "../day09"}
+day10 = {path = "../day10"}
