--- a/daily-template/Cargo.toml
+++ b/daily-template/Cargo.toml
@@ -4,11 +4,17 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-clap = {workspace = true}
-common = {path = "../common"}
-itertools = {workspace = true}
-nom = {workspace = true}
-num = {workspace = true}
+clap.workspace = true
+common.path = "../common"
+divan.workspace = true
+itertools.workspace = true
+nom.workspace = true
+num.workspace = true
 
 [lints]
 workspace = true
+
+[[bench]]
+name = "{{project-name}}"
+path = "benches/benchmarks.rs"
+harness = false
