--- a/day06/Cargo.toml
+++ b/day06/Cargo.toml
@@ -4,10 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-clap = {workspace = true}
-common = {path = "../common"}
-nom = {workspace = true}
-num = {workspace = true}
+clap.workspace = true
+common.path = "../common"
+nom.workspace = true
+num.workspace = true
 
 [lints]
 workspace = true
