--- a/day13/Cargo.toml
+++ b/day13/Cargo.toml
@@ -4,15 +4,17 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-clap = {workspace = true}
-common = {path = "../common"}
-itertools = {workspace = true}
-nom = {workspace = true}
-num = {workspace = true}
-divan = {workspace = true}
+clap.workspace = true
+common.path = "../common"
+divan.workspace = true
+itertools.workspace = true
+nom.workspace = true
+num.workspace = true
 
 [lints]
 workspace = true
 
-[dev.dependencies]
-divan = {workspace = true}
+[[bench]]
+name = "day13"
+path = "benches/benchmarks.rs"
+harness = false
