--- a/rust_advent_2023/Cargo.toml
+++ b/rust_advent_2023/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-clap = {workspace = true}
-common = {path = "../common"}
+clap.workspace = true
+common.path = "../common"
 day01 = {path = "../day01"}
 day02 = {path = "../day02"}
 day03 = {path = "../day03"}
@@ -20,3 +20,4 @@ day11 = {path = "../day11"}
 day12 = {path = "../day12"}
 day13 = {path = "../day13"}
 day14 = {path = "../day14"}
+day15 = {path = "../day15"}
