optimized part2 of day 16

--- a/daily-template/Cargo.toml
+++ b/daily-template/Cargo.toml
@@ -10,6 +10,7 @@ divan.workspace = true
 itertools.workspace = true
 nom.workspace = true
 num.workspace = true
+rayon.workspace = true
 
 [lints]
 workspace = true
